--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
- # MongoDB Connection
- MONGODB_URI=mongodb+srv://anura-admin:Mqr1aZF8Aap7yOdZ@anura-tyres.5fl6btt.mongodb.net/?appName=anura-tyres
 
+PORT=10000
+MONGO_URI=mongodb+srv://anura-admin:Mqr1aZF8Aap7yOdZ@anura-tyres.5fl6btt.mongodb.net/anura-tyres?retryWrites=true&w=majority
+JWT_SECRET=anura_tyres_secret
+NODE_ENV=production
