--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
+ # MongoDB Connection
+ MONGODB_URI=mongodb+srv://anura-admin:Mqr1aZF8Aap7yOdZ@anura-tyres.5fl6btt.mongodb.net/anura-tyres?retryWrites=true&w=majority
 
-PORT=10000
-MONGO_URI=mongodb+srv://anura-admin:Mqr1aZF8Aap7yOdZ@anura-tyres.5fl6btt.mongodb.net/anura-tyres?retryWrites=true&w=majority
-JWT_SECRET=anura_tyres_secret
-NODE_ENV=production
