--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
  # MongoDB Connection
- MONGODB_URI=mongodb+srv://anura-admin:Mqr1aZF8Aap7yOdZ@anura-tyres.5fl6btt.mongodb.net/anura-tyres?retryWrites=true&w=majority
+ MONGODB_URI=mongodb+srv://anura-admin:Mqr1aZF8Aap7yOdZ@anura-tyres.5fl6btt.mongodb.net/?appName=anura-tyres
 
